--- a/README
+++ b/README
@@ -16,4 +16,6 @@ newbranch-7
 newbranch-8
 	-Po dodaniu do skryptu flagi "--init" klonuje repozytorium i zmienia zmienną $PATH
 newbranch-9
-	- Dopisanie fragmentu skryptu, który tworzy 100 plików tym razem każdy w osobnym folderze. Zawartość plików taka sama jak w poprzendnim zadaniu. Flagi wywołujące skrypt --logs, -l
+	-Dopisanie fragmentu skryptu, który tworzy 100 plików tym razem każdy w osobnym folderze. Zawartość plików taka sama jak w poprzendnim zadaniu. Flagi wywołujące skrypt --logs, -l
+newbranch-10
+	-Tworzy 30 plików w 30 folderach
